# proiectMCPP

./: .gitignore  CMakeLists.txt  README.md  gitc.sh  intervals.txt  vcpkg.json
modules/Database/: CMakeLists.txt
modules/Database/inc/: MovieDatabase.h  db_headers.h
modules/Database/src/: MovieDatabase.cpp  db_headers.cpp  dblib.cpp  dblib.h  dbtest.cpp
modules/Logic/: CMakeLists.txt
modules/Logic/inc/: RecommenderSystem.h
modules/Logic/src/: RecTest.cpp  RecommenderSystem.cpp
modules/UI/: CMakeLists.txt
modules/UI/inc/: Movie.h  MovieDTO.h  MovieDetails.h  MoviesTable.h  MoviesTableModel.h  MoviesTableView.h  QnetworkAcces.h  ShowMovie.h  SignIn.h  SignUp.h  TMDB.h  User.h  Wrapper.h  dialog.h  mainwindow.h  moviedetails.h  moviestable.h  showmovie.h  usermeniu.h  wrapper.h
modules/UI/src/: Movie.cpp  MovieDTO.cpp  MovieDetails.cpp  MovieDetails.ui  MoviesTable.cpp  MoviesTable.ui  MoviesTableModel.cpp  MoviesTableView.cpp  QnetworkAcces.cpp  ShowMovie.cpp  ShowMovie.ui  SignIn.cpp  SignIn.ui  SignUp.cpp  SignUp.ui  TMDB.cpp  User.cpp  Wrapper.cpp  Wrapper.ui  dialog.cpp  dialog.ui  main.cpp  mainQNetwork.cpp  mainwindow.cpp  mainwindow.ui  moviedetails.cpp  moviedetails.ui  moviestable.cpp  moviestable.ui  showmovie.cpp  showmovie.ui  usermeniu.cpp  usermeniu.ui  wrapper.cpp  wrapper.ui
resources/: database.sqlite
testing/: CMakeLists.txt  hello_test.cc
